# soroban-shield-contracts

./: .gitignore  CODEOWNERS  CONTRIBUTING  Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  stellar_wave_task.md
.github/workflows/: ci.yml  release.yml
scripts/: build.sh  test.sh
src/: lib.rs
src/contracts/: mod.rs
src/contracts/access_control/: contract.rs  interface.rs  mod.rs  roles.rs  test.rs
src/contracts/multi_sig/: contract.rs  interface.rs  mod.rs  proposal.rs  test.rs
src/contracts/ownable/: contract.rs  interface.rs  mod.rs  test.rs
src/contracts/pausable/: contract.rs  interface.rs  mod.rs  test.rs
src/contracts/rate_limiter/: contract.rs  interface.rs  mod.rs  test.rs  window.rs
src/contracts/reentrancy_guard/: contract.rs  interface.rs  mod.rs  test.rs
src/contracts/upgradeable/: contract.rs  interface.rs  mod.rs  proxy.rs  test.rs
src/errors/: access.rs  mod.rs  multi_sig.rs  pausable.rs  rate_limiter.rs
src/events/: access_control.rs  mod.rs  multi_sig.rs  ownable.rs  pausable.rs
src/types/: address.rs  mod.rs  proposal.rs  role.rs
tests/integration/: access_multi_sig_test.rs  full_stack_test.rs  ownable_pausable_test.rs
